tooling/nargo_cli/tests/snapshots/execution_success/global_array_rc_regression_8259/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_C: [bool; 3] = [true, false, true];

fn main(a: bool) -> pub [bool; 3] {
    let b: [bool; 3] = func_1(a, G_C);
    if a {
        G_C
    } else {
        b
    }
}

fn func_1(a: bool, mut b: [bool; 3]) -> [bool; 3] {
    b[1_u32] = a;
    b
}
