tooling/nargo_cli/tests/snapshots/execution_success/global_array_rc_regression_8259/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 3,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VXwW7TQBBdx3YS25REwBdw4+bilASJQyRKAze4gMQBYVJyQoJP8KfjpTPy8/O4Ra13JWt3Z2bfm52dWduRu2lx+0QyTqTXOTaV7aUvH9bOJ8QqI/AxhvEM5uamRo3B/o/0mfQzIttPFJCMeKfE35WbY+b6bWL/qwziGCo+fMAT4pcLwXnfuF5OOOKNyY7X+HYmY8w5tVm2zzPXjZ8DB3IqF+OoPmQ82nx5rfhJAPy2VWe6x6bDn0H8fEuaPjfqUtAlEM8rik+IfMT4BMrH6qkbz0Gt5bdNp3Nu+rvoMgx+qWf4TvCRQ7mvmiBx3UTE51z/DB3x5+Tr1PdaRHzoD8aHa+PQDH1dGzrOkYPBczB4LKzLCbHUr8Ld1O0nka/c8B7UOIR+B+hdq/dJ4ro7mL8VdH98Rybgd0qyF9L7/X6BNWP3Pso4lpiPmBu8Dusq4H3+X3WF/LkL+73AZ3lXXDV2qeHrmnS+YV2xLjZksxEsfL8/FAv9Wrnh/rmO0IcQdTQXvMTYB/o2I3scO9fVkcreSG/VkXXeKLutjtifhLC1PZb5AmRWPeI663tH1+s7LwHdlLXp4/QV/BjEt+nrMB/VrgD5ounWxrQvxvNtifaky0CH+/ctl7nmD2OpHynZf5T5Svo5rNH1a4N/Tvw9vw0ZnjNjxYZM7X1MP8jYxzXk+W933Q+yxj51/X9dR/wp2X+WeU771RrZ39PP07Y+P1X1qb6or683x/oJ4WPMigD89bbaHV9ujtsfF1VdvbqT38onrGffNCcxZ9Fe8VKy/6a27fNdxvyvg3ze7vctdtFI/w/DkCVNX2blMta42it33gx9VF0BOvxv8+2RzDFeiKV+pGT/S+Z6JliXun5t8C+Jv+e3IeMaLwz7wrD35/NT8aTHvYf4h5gTPsrYN80dn9d/AVkXV1gNFAAA",
  "debug_symbols": "dZHBjoQgDED/hTMHqiOCv2KMQcUJCUHD6CYb479vsbozHubCo5TXFLqxwXbrs3VhnF6sqjfWRee9e7Z+6s3ipoCnGxNpeeSsyjh7PAgFQRJKgiLoA4UgACEjUJUCqwCiIEhCSVAEfUAKAhByAumSdEm6TPq+c3b13i7R2tT6x2PwibOJNiysCqv3nP0Yvx6XXrMJBxcTMSs4s2FAYsHReZt2O3/b4ruq89MFUf7bxV2H73oG+vSzLL/5DUamd/E2nT1Vis503p7huIb+I7v8zlfmmu4cp94Oa7Sp0nvEuNRacABoOMOfrkvBlcA9pIwCrmQKIAUlV7rZU09/",
  "file_map": {
    "50": {
      "source": "global G_C: [bool; 3] = [true, false, true];\nfn main(a: bool) -> pub [bool; 3] {\n    let b = func_1(a, G_C);\n    if a {\n        G_C\n    } else {\n        b\n    }\n}\nfn func_1(a: bool, mut b: [bool; 3]) -> [bool; 3] {\n    b[1] = a;\n    b\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
